--- a/Dev_protfolio/style.css
+++ b/Dev_protfolio/style.css
@@ -142,3 +142,72 @@ nav li a {
   border: 1px solid #fd6e0a;
   background: #fff8f3;
 }
+
+/* abour me styling  */
+
+.about-me {
+  border: 1px solid red;
+  margin-top: 130px;
+  width: 1140px;
+  height: 550px;
+  background: #fff8f3;
+  border-radius: 10px;
+  margin-left: 230px;
+}
+
+.about-data {
+  margin: 131px 157px 131px 156px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  border: 1px solid #000;
+  width: 827px;
+  background: #fff;
+}
+
+.about-title {
+  color: #181818;
+  /* text-align: center; */
+  font-family: "Open Sans";
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.about-desc {
+  color: #757575;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+.about-info {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 50px;
+}
+
+.about-info h3 {
+  color: #757575;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.about-info a,
+h3 {
+  color: #474747;
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+}
