--- a/Dev_protfolio/style.css
+++ b/Dev_protfolio/style.css
@@ -146,7 +146,7 @@ nav li a {
 /* abour me styling  */
 
 .about-me {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin-top: 130px;
   width: 1140px;
   height: 550px;
@@ -210,4 +210,82 @@ h3 {
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
+}
+
+/* skill styling */
+.skills-sec {
+  /* border: 1px solid red; */
+  margin-top: 130px;
+  width: 1140px;
+  text-align: center;
+  margin-left: 236px;
+}
+
+.skill-title {
+  color: #181818;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 30px;
+}
+
+.skill-desc {
+  color: #757575;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 50px;
+}
+
+.skills-set {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  /* text-align: center; */
+  gap: 24px;
+
+  /* border: 1px solid red; */
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skills img {
+  width: 44px;
+  height: 44px;
+  margin: 30px 193px 30px 30px;
+}
+.skills h3 {
+  color: #181818;
+  /* text-align: center; */
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0 63px 20px 30px;
+}
+
+.skills p {
+  color: #757575;
+  text-align: left;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
 }
