--- a/Dev_protfolio/style.css
+++ b/Dev_protfolio/style.css
@@ -206,13 +206,12 @@ nav li a {
   line-height: 30px;
 }
 
-.about-info a,
-h3 {
+.about-info h3 {
   color: #474747;
   font-family: "Open Sans";
   font-size: 20px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 800;
   line-height: 30px;
 }
 
@@ -248,13 +247,11 @@ h3 {
 }
 
 .skills-set {
+  height: 377px;
+  /* border: 1px solid red; */
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
-  /* text-align: center; */
   gap: 24px;
-
-  /* border: 1px solid red; */
 }
 
 .skills {
@@ -262,7 +259,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid #fff;
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
@@ -270,18 +267,18 @@ h3 {
 
 .skills img {
   width: 44px;
-  height: 44px;
-  margin: 30px 193px 30px 30px;
+  margin: 0 193px 30px 20px;
 }
+
 .skills h3 {
   color: #181818;
-  /* text-align: center; */
   font-family: "Open Sans";
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin: 0 63px 20px 30px;
+  margin: 20px 63px 20px 0;
+  border: 1px solid red;
 }
 
 .skills p {
@@ -291,7 +288,8 @@ h3 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 28px; /* 175% */
+  line-height: 28px;
+  margin-left: 20px;
 }
 
 /* resume-summary styling  */
@@ -370,4 +368,104 @@ h3 {
 
 .resume-down {
   text-align: center;
+  margin-top: 50px;
+}
+
+/* footer section styling */
+.submitBtn {
+  width: 150px;
+  height: 64px;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 18px 36px;
+  background-color: #fd6e0a;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  background: #fff8f3;
+  width: 1600px;
+  height: 780px;
+  margin-top: 113px;
+  gap: 120px;
+}
+
+.footer-contact {
+  padding: 0 40px 0 40px;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  margin-left: 230px;
+  margin-top: 130px;
+  /* padding-right: 235px; */
+  gap: 20px;
+}
+
+.footer-contact h3 {
+  color: #181818;
+  /* text-align: center; */
+  font-family: "Open Sans";
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.footer-contact p {
+  color: #474747;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.social a {
+  color: #fd6e0a;
+}
+
+.footer-message {
+  padding: 0 40px 0 40px;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  margin-top: 130px;
+  margin-right: 230px;
+  gap: 24px;
+}
+
+.footer-message h3 {
+  color: var(--Dark-01, #181818);
+  /* text-align: center; */
+  font-family: "Open Sans";
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.mail {
+  height: 64px;
+}
+.name {
+  height: 64px;
+}
+.message {
+  width: 461px;
+  height: 180px;
+}
+input::-webkit-input-placeholder {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  font-size: 20px;
 }
